--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/3910.webp
+    - assets/images/200304_Olive_PadThai-ebe0f22-scaled.webp
+    - assets/images/OLI-0519-Healthy_GreenThaiFishCurry_32208-c3cee9a.webp
+    - assets/images/p110-20250121rps2352pumpkincurrypreview-8534543.webp
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
