--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,39 +52,20 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/3910.webp
     - assets/images/200304_Olive_PadThai-ebe0f22-scaled.webp
     - assets/images/OLI-0519-Healthy_GreenThaiFishCurry_32208-c3cee9a.webp
     - assets/images/p110-20250121rps2352pumpkincurrypreview-8534543.webp
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+    - assets/images/fonts/BerkshireSwash-Regular.ttf
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: BerkshireSwash
+      fonts:
+        - asset: assets/images/fonts/BerkshireSwash-Regular.ttf
+         
+  
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
